# openedx_ibl_poc_1

./: README.md  pyproject.toml
identifier/: manage.py
identifier/identifier/: asgi.py  settings.py  urls.py  wsgi.py
identifier/profiles/: admin.py  models.py  urls.py  views.py
identifier/profiles/migrations/: 0001_initial.py
identifier/profiles/templates/: authorize.html
